[gd_scene load_steps=37 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Comic Sans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Player/Objective.gd" type="Script" id=3]
[ext_resource path="res://Player/Dialog.gd" type="Script" id=4]
[ext_resource path="res://Player/Gun.png" type="Texture" id=5]
[ext_resource path="res://Player/Gun.gd" type="Script" id=6]
[ext_resource path="res://Player/Gunshot.wav" type="AudioStream" id=7]
[ext_resource path="res://Player/SpeedrunTimer.gd" type="Script" id=8]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/Gas Station Exterior/Explosion.png" type="Texture" id=10]
[ext_resource path="res://Player/DebugMenu.gd" type="Script" id=11]
[ext_resource path="res://Levels/House/Shitter.png" type="Texture" id=12]
[ext_resource path="res://Levels/House_Part2/Gun.png" type="Texture" id=13]
[ext_resource path="res://Player/PauseMenu.gd" type="Script" id=14]
[ext_resource path="res://Assets/pause.png" type="Texture" id=15]

[sub_resource type="CapsuleMesh" id=7]
mid_height = 3.0

[sub_resource type="CapsuleShape" id=8]
height = 3.0

[sub_resource type="CylinderShape" id=11]

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Rise"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 85 ), Vector2( 0, 2 ) ]
}

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.784314, 0.784314, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=27]

[sub_resource type="DynamicFont" id=28]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=30]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/fonts/font = SubResource( 2 )
Button/styles/focus = SubResource( 25 )
Button/styles/hover = SubResource( 26 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 27 )
CheckBox/colors/font_color = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_focus = Color( 1, 1, 1, 1 )
CheckBox/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckBox/fonts/font = SubResource( 28 )
CheckBox/styles/hover_pressed = SubResource( 29 )
CheckBox/styles/pressed = SubResource( 9 )
Label/fonts/font = SubResource( 30 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 7 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 8 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
shape = SubResource( 11 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Camera" type="Camera" parent="Head"]

[node name="InteractionRay" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -8 )

[node name="GunRay" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -25 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpeedrunLabel" type="Label" parent="UI"]
anchor_right = 1.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 16 )
text = "00 : 00 : 00 : 00"
align = 1
script = ExtResource( 8 )

[node name="Crosshair" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_scale = Vector2( 0.05, 0.05 )
rect_pivot_offset = Vector2( 20, 20 )

[node name="InteractionHint" type="Label" parent="UI"]
modulate = Color( 0, 1, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 9.0
margin_right = 160.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 20, 20 )
custom_fonts/font = SubResource( 6 )
text = "[E] Interact"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="UI/Objective"]
margin_left = 2.0
margin_top = 21.0
margin_right = 130.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 5 )
text = "piss myself"

[node name="StepNumber" type="Label" parent="UI/Objective"]
margin_left = 1.0
margin_right = 129.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 10 )
text = "Step 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gun" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="UI/Gun"]
position = Vector2( 0, 2 )
scale = Vector2( 0.74, 0.75 )
texture = ExtResource( 5 )
offset = Vector2( 26, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Gun"]
anims/RESET = SubResource( 15 )
anims/Rise = SubResource( 14 )

[node name="ShotSFX" type="AudioStreamPlayer" parent="UI/Gun"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="MobileControls" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MoveStick" parent="UI/MobileControls" instance=ExtResource( 9 )]
anchor_left = 0.006
anchor_top = 0.642
anchor_right = 0.497
margin_left = -0.92
margin_top = -2.08
margin_right = 473.96
margin_bottom = 264.0
rect_scale = Vector2( 0.25, 0.25 )
joystick_mode = 1
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_forward"
action_down = "move_backward"

[node name="Interact" type="TouchScreenButton" parent="UI/MobileControls"]
position = Vector2( 240, 112 )
scale = Vector2( 0.625, 0.625 )
normal = ExtResource( 12 )
action = "use"

[node name="Fire" type="TouchScreenButton" parent="UI/MobileControls"]
position = Vector2( 192, 152 )
scale = Vector2( 0.3125, 0.3125 )
normal = ExtResource( 13 )
action = "fire"

[node name="DebugMenu" type="TouchScreenButton" parent="UI/MobileControls"]
position = Vector2( 288, 0 )
scale = Vector2( 0.25, 0.25 )
normal = ExtResource( 10 )
action = "debug.enable_menu"
visibility_mode = 1

[node name="Pause" type="TouchScreenButton" parent="UI/MobileControls"]
position = Vector2( 291, 3 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 15 )
action = "quit"
visibility_mode = 1

[node name="Dialog" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -88.0
margin_right = 160.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.662745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogName" type="Label" parent="UI/Dialog"]
margin_top = -5.0
margin_right = 113.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 13 )
text = "Ass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="Label" parent="UI/Dialog"]
margin_left = 12.0
margin_top = 14.0
margin_right = 304.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 12 )
text = "Assest of the asses
whatever that means"
autowrap = true

[node name="DebugMenu" type="Control" parent="UI"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="UI/DebugMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="GiveGun" type="Button" parent="UI/DebugMenu"]
anchor_left = 0.025
anchor_top = 0.033
anchor_right = 0.247
anchor_bottom = 0.117
margin_top = 0.0799999
margin_right = -0.0400009
margin_bottom = -0.0800018
text = "Give Gun"

[node name="HideUI" type="Button" parent="UI/DebugMenu"]
anchor_left = 0.025
anchor_top = 0.133
anchor_right = 0.216
anchor_bottom = 0.217
margin_top = 0.0799999
margin_right = -0.120003
margin_bottom = -0.0800018
toggle_mode = true
text = "Hide UI"

[node name="Exit" type="Button" parent="UI/DebugMenu"]
anchor_left = 0.75
anchor_top = 0.9
anchor_right = 0.994
anchor_bottom = 0.983
margin_left = -1.52588e-05
margin_top = -1.52588e-05
margin_right = -0.0800171
margin_bottom = 0.0799866
text = "Exit debug"

[node name="MainMenu" type="Button" parent="UI/DebugMenu"]
anchor_left = 0.475
anchor_top = 0.9
anchor_right = 0.734
anchor_bottom = 0.983
margin_top = -1.52588e-05
margin_right = 0.119995
margin_bottom = 0.0799866
text = "Main Menu"

[node name="LevelSelect" type="ScrollContainer" parent="UI/DebugMenu"]
anchor_left = 0.6
anchor_right = 1.003
anchor_bottom = 0.267
margin_left = -31.0
margin_right = 0.039978
margin_bottom = -0.0799942

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DebugMenu/LevelSelect"]
margin_right = 93.0
margin_bottom = 260.0

[node name="Arrested" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_right = 93.0
margin_bottom = 20.0
text = "Arrested"

[node name="Credits" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 24.0
margin_right = 93.0
margin_bottom = 44.0
text = "Credits"

[node name="GasStation" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 48.0
margin_right = 93.0
margin_bottom = 68.0
text = "GasStation"

[node name="GasStation2" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 72.0
margin_right = 93.0
margin_bottom = 92.0
text = "GasStation2"

[node name="GasExterior" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 96.0
margin_right = 93.0
margin_bottom = 116.0
text = "GasExterior"

[node name="GasExterior2" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 120.0
margin_right = 93.0
margin_bottom = 140.0
text = "GasExterior2"

[node name="House" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 144.0
margin_right = 93.0
margin_bottom = 164.0
text = "House"

[node name="House2" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 168.0
margin_right = 93.0
margin_bottom = 188.0
text = "House2"

[node name="Mario" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 192.0
margin_right = 93.0
margin_bottom = 212.0
text = "Mario"

[node name="Road" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 216.0
margin_right = 93.0
margin_bottom = 236.0
text = "Road"

[node name="Sewer" type="Button" parent="UI/DebugMenu/LevelSelect/VBoxContainer"]
margin_top = 240.0
margin_right = 93.0
margin_bottom = 260.0
text = "Sewer"

[node name="Reload" type="Button" parent="UI/DebugMenu"]
anchor_left = 0.503
anchor_top = 0.283
anchor_right = 0.834
anchor_bottom = 0.367
margin_left = 0.0399933
margin_top = 0.0799942
margin_right = 0.119995
margin_bottom = -0.0800018
text = "Reload Current"

[node name="PauseMenu" type="Control" parent="UI"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 14 )

[node name="ColorRect" type="ColorRect" parent="UI/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
alignment = 1

[node name="Resume" type="Button" parent="UI/PauseMenu/VBoxContainer"]
margin_top = 81.0
margin_right = 56.0
margin_bottom = 104.0
text = "Resume"

[node name="Reset" type="Button" parent="UI/PauseMenu/VBoxContainer"]
margin_top = 108.0
margin_right = 56.0
margin_bottom = 131.0
text = "Reset"

[node name="Quit" type="Button" parent="UI/PauseMenu/VBoxContainer"]
margin_top = 135.0
margin_right = 56.0
margin_bottom = 158.0
text = "Quit"

[connection signal="finished" from="UI/Gun/ShotSFX" to="UI/Gun" method="_on_ShotSFX_finished"]
[connection signal="pressed" from="UI/DebugMenu/GiveGun" to="UI/DebugMenu" method="_on_GiveGun_pressed"]
[connection signal="toggled" from="UI/DebugMenu/HideUI" to="UI/DebugMenu" method="_on_HideUI_toggled"]
[connection signal="pressed" from="UI/DebugMenu/Exit" to="UI/DebugMenu" method="_on_Exit_pressed"]
[connection signal="pressed" from="UI/DebugMenu/MainMenu" to="UI/DebugMenu" method="_on_MainMenu_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/Arrested" to="UI/DebugMenu" method="_on_Arrested_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/Credits" to="UI/DebugMenu" method="_on_Credits_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/GasStation" to="UI/DebugMenu" method="_on_GasStation_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/GasStation2" to="UI/DebugMenu" method="_on_GasStation2_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/GasExterior" to="UI/DebugMenu" method="_on_GasExterior_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/GasExterior2" to="UI/DebugMenu" method="_on_GasExterior2_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/House" to="UI/DebugMenu" method="_on_House_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/House2" to="UI/DebugMenu" method="_on_House2_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/Mario" to="UI/DebugMenu" method="_on_Mario_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/Road" to="UI/DebugMenu" method="_on_Road_pressed"]
[connection signal="pressed" from="UI/DebugMenu/LevelSelect/VBoxContainer/Sewer" to="UI/DebugMenu" method="_on_Sewer_pressed"]
[connection signal="pressed" from="UI/DebugMenu/Reload" to="UI/DebugMenu" method="_on_Reload_pressed"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/Resume" to="UI/PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/Reset" to="UI/PauseMenu" method="_on_Reset_pressed"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/Quit" to="UI/PauseMenu" method="_on_Quit_pressed"]
